objects/Membership_Bundle_Benefit__c.object
<CustomObject><fields>
        <fullName>Benefit_Count__c</fullName>
        <formula>Benefit__r.Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Benefit_Name__c</fullName>
        <formula>Benefit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Benefit__c</fullName>
        <label>Benefit</label>
        <referenceTo>Benefit__c</referenceTo>
        <relationshipLabel>Membership Bundle Benefits</relationshipLabel>
        <relationshipName>Membership_Bundle_Benefits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Membership_Bundle__c</fullName>
        <label>Membership Bundle</label>
        <referenceTo>Membership_Bundle__c</referenceTo>
        <relationshipLabel>Membership Bundle Benefits</relationshipLabel>
        <relationshipName>Membership_Bundle_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>false</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>false</enableSharing><enableStreamingApi>false</enableStreamingApi><label>Membership Bundle Benefit</label><nameField>
        <displayFormat>MB-{0000}</displayFormat>
        <label>Membership Bundle Benefit Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Membership Bundle Benefits</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>